# serverless-fastapi

./: .flake8  .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  TODO  pyproject.toml  serverless.yml
.github/workflows/: cicd.yml
api/: main.py
api/models/: todo.py
api/repos/: todo.py
api/routes/: todo.py
tests/: test_api.py
tests/contract/: todo-api-contract.py
tests/load/: locustfile.py
tests/unit/repos/: test_repos_todo.py
tests/unit/routes/: test_routes_todo.py
