[tool.poetry]
name = "serverless-fastapi"
version = "1.0.1"
description = ""
authors = ["Damian Ziobro <damian@xmementoit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.13.5"
fastapi = "0.63.0"
uvicorn = "0.13.4"
mangum = "0.11.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "5.5"
bandit = "1.6.2"
pylint = "2.5.2"
black = "20.8b1"
isort = "4.3.21"
pytest-cov = "2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
