[tool.poetry]
name = "serverless-fastapi"
version = "1.0.1"
description = ""
authors = ["Damian Ziobro <damian@xmementoit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.95.1"
uvicorn = "0.21.1"
mangum = "0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^22.3.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-mypy = "^17.8.0"
httpx = "^0.24.0"
locust = "^2.15.1"
hypothesis = "^6.74.0"
schemathesis = "^3.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
